# bcr-test

./: BUILD.bazel  MODULE.bazel
.bcr/: metadata.template.json
.github/workflows/: release.yml
