load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

package(
    default_visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/bstoll/bcr-test
gazelle(name = "gazelle")

go_library(
    name = "lib",
    srcs = ["hello.go"],
    importpath = "",
)

go_binary(
    name = "bcr-test",
    embed = [":bcr-test_lib"],
)

go_library(
    name = "bcr-test_lib",
    srcs = ["hello.go"],
    importpath = "github.com/bstoll/bcr-test",
)
